<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<CheckBoxPreference android:key="autosave"
		android:title="@string/autosave" android:summary="@string/autosave_summary"
		android:defaultValue="true" />
	<CheckBoxPreference android:key="autoload"
		android:title="@string/autoload" android:summary="@string/autoload_summary"
		android:defaultValue="true" />
	<CheckBoxPreference android:key="sdcarduse"
		android:title="@string/sdcarduse" android:summary="@string/sdcarduse_summary"
		android:defaultValue="true" />
	<ListPreference android:key="fontsize"
		android:title="@string/title_list_preference" android:summary="@string/summary_list_preference"
		android:entries="@array/entries_list_preference" android:entryValues="@array/entryvalues_list_preference"
		android:dialogTitle="@string/dialog_title_list_preference" />
	<CheckBoxPreference android:key="autoread"
		android:title="@string/autoread" android:summary="@string/autoread_summary"
		android:defaultValue="false" />
	<CheckBoxPreference android:key="compare"
		android:title="역본비교" android:defaultValue="true" android:summary="역본을 비교해서 보시겠습니까?" />
	<CheckBoxPreference android:key="fullscr"
		android:title="전체화면" android:defaultValue="false"
		android:summary="성경읽기창을 전체화면으로 확대해서사용하시겠습니까?" />
	<CheckBoxPreference android:key="theme"
		android:title="위젯 글자 색상" android:defaultValue="false"
		android:summary="위젯의 글자색상을 검정색으로 사용하시겠습니까?" />


	<ListPreference android:key="backgroundcolor"
		android:title="성경읽기 배경색상" android:summary="성경읽기 화면의 배경색상을 선택하십시오."
		android:entries="@array/viewer_colors" android:entryValues="@array/viewer_colors_value"
		 android:dialogTitle="배경색 선택" />

	<ListPreference android:key="fontcolor" android:title="성경읽기 글자색상"
		android:summary="성경읽기 화면에 사용할 글자색을 선택하십시오." android:entries="@array/viewer_colors"
		android:entryValues="@array/viewer_colors_value" 
		android:dialogTitle="글자색 선택" />





	<CheckBoxPreference android:key="calendar"
		android:title="Calendar 사용" android:defaultValue="true"
		android:summary="Calendar를 이용하여 맥체인성경읽기 표를 사용하시려면 선택하십시오." />
</PreferenceScreen>