<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<ScrollView android:id="@+id/ScrollView01"
		android:layout_width="fill_parent" android:layout_height="wrap_content">


		<FrameLayout android:id="@+id/FrameLayout01"
			android:layout_width="fill_parent" android:layout_height="wrap_content">


			<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:padding="10dip"
				android:layout_width="fill_parent" android:layout_height="wrap_content">

				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/lbl_searchinfo"
					android:textSize="12sp" />
				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/lbl_searchtarget"
					android:textSize="12sp" />

				<Spinner android:id="@+id/spin_searchversion"
					android:layout_height="wrap_content" android:layout_width="250dip" />

				<Spinner android:id="@+id/spin_searchtestment"
					android:layout_height="wrap_content" android:layout_width="fill_parent" />


				<TextView android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/lbl_searchkeyword"
					android:textSize="12sp" />

				<EditText android:id="@+id/keyword1" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="love" />

				<Spinner android:id="@+id/spin_searchop"
					android:layout_height="wrap_content" android:layout_width="150dip"
					android:layout_gravity="right" />

				<EditText android:id="@+id/keyword2" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="jesus" />


				<Button android:id="@+id/btn_search" android:text="@string/btn_search"
					android:layout_height="wrap_content" android:layout_width="100dip"
					android:layout_gravity="right" />



			</LinearLayout>


		</FrameLayout>
	</ScrollView>
</LinearLayout>