<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/biblecontents" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:orientation="horizontal"
	android:padding="10sp" >
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_height="fill_parent" android:layout_width="fill_parent"
		android:paddingTop="40dip">

		<TableRow android:id="@+id/TableRow01" android:layout_height="wrap_content"
			android:layout_width="wrap_content">


			<TextView android:layout_column="1" android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/app_caption"
				android:textColor="@color/orange_color"
				android:textSize="40sp" android:textStyle="bold" />
		</TableRow>
		<TableRow android:id="@+id/TableRow02" android:layout_height="wrap_content"
			android:layout_width="fill_parent">

			<TextView android:layout_column="1" android:layout_height="wrap_content"
				android:paddingLeft="200dip" android:text="@string/app_version"
				android:layout_width="wrap_content" android:textSize="15sp"
				android:textStyle="italic" />
		</TableRow>
	</TableLayout>
	<TableLayout android:id="@+id/TableLayout01"
		android:paddingBottom="40dip" android:paddingLeft="20dip"
		android:layout_height="fill_parent" android:layout_width="fill_parent"
		android:gravity="center|bottom">
		<TableRow android:id="@+id/TableRow13" android:layout_height="wrap_content"
			android:layout_width="fill_parent">

			<Spinner android:id="@+id/spinbible" android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:layout_column="1"
				android:layout_span="2" />

		</TableRow>
		<TableRow android:id="@+id/TableRow03" android:layout_height="wrap_content"
			android:layout_width="fill_parent">

			<Spinner android:id="@+id/spinner" android:layout_height="wrap_content"
				android:layout_width="140dip" android:layout_column="1" />
			<Spinner android:id="@+id/spinner2" android:layout_height="wrap_content"
				android:layout_width="140dip" android:layout_column="2" />

		</TableRow>
		<TableRow android:id="@+id/TableRow04" android:layout_height="wrap_content"
			android:layout_width="fill_parent">
			<Button android:text="@string/btn_About" android:id="@+id/btn_About"
				android:layout_gravity="right" android:layout_width="wrap_content"
				android:layout_column="1" android:layout_span="2"
				android:layout_height="wrap_content"></Button>
		</TableRow>
	</TableLayout>
</RelativeLayout>